@@ -73,6 +73,11 @@ m_pgp2, m_pgp5, m_gpg
 m_fido This module searches your Fido nodelist, stored in
        $HOME/.lbdb/nodelist created by nodelist2lbdb(1).
 
+m_abook
+       This module uses the program abook
+       (http://www.linuxstart.com/~jheinonen/abook/), a text based
+       address book application to search for addresses.
+
 Feel free to create your own modules to query LDAP servers, YP maps,
 and the like. m_finger should be a good example of how to do it.
 
