@@ -11,7 +11,8 @@ build-stamp:
 	dh_testdir
 
 	env PGP=/usr/bin/pgp PGPK=/usr/bin/pgpk GPG=/usr/bin/gpg \
-		FINGER=/usr/bin/finger DOTLOCK=/usr/bin/mutt_dotlock \
+		FINGER=/usr/bin/finger ABOOK=/usr/bin/abook \
+		DOTLOCK=/usr/bin/mutt_dotlock \
 		./configure --prefix=/usr --libdir='$${prefix}/lib/lbdb' \
 			--mandir='$${prefix}/share/man' --sysconfdir=/etc
 	$(MAKE) CFLAGS="-O2 -g -Wall"
