@@ -1,5 +1,5 @@
 .\" -*- nroff -*-
-.\" Copyright (c) 1998,1999  Roland Rosenfeld <roland@spinnaker.de>
+.\" Copyright (c) 1998-2000  Roland Rosenfeld <roland@spinnaker.de>
 .\"               
 .\" This program is free software; you can redistribute it and/or modify
 .\" it under the terms of the GNU General Public License as published by
@@ -15,12 +15,12 @@
 .\" along with this program; if not, write to the Free Software
 .\" Foundation, Inc.,59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 .\"
-.TH LBDB-FETCHADDR 1 "September 1999" "Unix" "User Manuals"
+.TH LBDB-FETCHADDR 1 "February 2000" "Unix" "User Manuals"
 .SH NAME
 lbdb-fetchaddr \- grab addresses from mails add append them to lbdb database
 .SH SYNOPSIS
 .B lbdb-fetchaddr
-.BI [ 'dateformat' ]
+.RI [ 'dateformat' ]
 .br
 .B lbdb-fetchaddr
 .RB [ -v | -h ]
