@@ -1,0 +1,33 @@
+#! @SH@
+#
+# -*-sh-mode-*-
+#
+#     Copyright (C) 2000 Ross Campbell <rcampbel@us.oracle.com>
+#     Copyright (C) 2000 Roland Rosenfeld <roland@spinnaker.de>
+# 
+#     This program is free software; you can redistribute it and/or modify
+#     it under the terms of the GNU General Public License as published by
+#     the Free Software Foundation; either version 2 of the License, or
+#     (at your option) any later version.
+# 
+#     This program is distributed in the hope that it will be useful,
+#     but WITHOUT ANY WARRANTY; without even the implied warranty of
+#     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#     GNU General Public License for more details.
+# 
+#     You should have received a copy of the GNU General Public
+#     License along with this program; if not, write to the Free
+#     Software Foundation, Inc., 59 Temple Place, Suite 330, Boston,
+#     MA 02111-1307 USA
+#
+# $Id$
+
+ABOOK=@ABOOK@
+
+m_abook_query()
+{
+    if [ -x "$ABOOK" ]		# check whether abook in installed
+    then
+	$ABOOK --mutt-query "@$" | sed -e '1d;s/$/	abook/'
+    fi
+}
