@@ -4,8 +4,11 @@ lbdb (0.18.6) unstable; urgency=low
   * Hardcode finger and mutt_dotlock in debian/rules, to avoid additional
     Build-Depends.
   * use safe_strdup() instead of strdup() which isn't available on Ultrix.
+  * Add lbdb.spec by Horms <horms@vergenet.net>.
+  * Add abook support based on an idea by Ross Campbell
+    <rcampbel@us.oracle.com>.
 
- -- Roland Rosenfeld <roland@debian.org>  Sun, 16 Jan 2000 15:39:51 +0100
+ -- Roland Rosenfeld <roland@debian.org>  Sun, 30 Apr 2000 11:03:19 +0200
 
 lbdb (0.18.5) unstable; urgency=low
 
